--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
           - '8.1'
           - '8.2'
           - '8.3'
+          - '8.4'
         php-zts:
           - nts
           - ts
@@ -32,6 +33,8 @@ jobs:
           - php-version: '5.6'
             php-zts: 'ts'
           - php-version: '8.3'
+            php-zts: 'ts'
+          - php-version: '8.4'
             php-zts: 'ts'
     steps:
       - name: Setup PHP
